# Mooncake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dependencies.sh
allocator/: CMakeLists.txt
allocator/src/: AllocationStrategy.h  CMakeLists.txt  CacheAllocator.h  MyHeader.h  MySource.cpp  RandomAllocationStrategy.cpp  VirtualNode.h  main.cpp
checkpoint/: Makefile  catalog.go  engine.go  example.go  go.mod  metadata.go  registered_memory.go  transfer_engine.go
checkpoint/cmd/: example.go
doc/: alinux&centos_compile.md  p2p_store.md  transfer_engine.md  ubuntu_compile.md
doc/en/: architecture.md  build.md  error-code.md  p2p-store.md  transfer-engine-bench.md  transfer-engine.md  troubleshooting.md  vllm-integration.md  vllm_benchmark_results.md
doc/zh/: architecture.md  build.md  p2p-store.md  run-examples.md  transfer-engine-bench.md  transfer-engine.md  troubleshooting.md  vllm-integration.md
docs/: allocator_demo.md  error.md  managed_store.md  overview.md  quick-start.md  transfer_engine.md
example/: CMakeLists.txt  allocator_test.cpp  cufile_transport_test.c  deprecated_xport_test.c  endpoint_test.cpp  gpu_test.cpp  transfer_engine_test.cpp  xport_test.c
example/net/: CMakeLists.txt  example.cpp
include/net/: common.h  rdma_context.h  rdma_endpoint.h  transfer_engine.h  transfer_metadata.h
include/transfer_engine/: rdma_context.h  rdma_endpoint.h  transfer_engine.h  transfer_metadata.h
mooncake-allocator/: CMakeLists.txt
mooncake-allocator/include/: allocation_strategy.h  buffer_allocator.h  common_types.h  config.h  distributed_object_store.h  distributed_object_store_helper.h  dummy_transfer_agent.h  random_allocation_strategy.h  rdma_transfer_agent.h  replica_allocator.h  transfer_agent.h  types.h
mooncake-allocator/include/cachelib_memory_allocator/: MemoryPool.h  MemoryPoolManager.h  Slab.h  SlabAllocator.h
mooncake-allocator/include/cachelib_memory_allocator/common/: CompilerUtils.h  Exceptions.h  Throttler.h  Time.h  Utils.h
mooncake-allocator/include/cachelib_memory_allocator/fake_include/folly/logging/: xlog.h
mooncake-allocator/include/cachelib_memory_allocator/fake_include/folly/portability/: Config.h
mooncake-allocator/include/cachelib_memory_allocator/include/fmt/: args.h  chrono.h  color.h  compile.h  core.h  format-inl.h  format.h  os.h  ostream.h  printf.h  ranges.h  xchar.h
mooncake-allocator/include/cachelib_memory_allocator/include/folly/: CPortability.h  Portability.h
mooncake-allocator/include/cachelib_memory_allocator/include/folly/lang/: Builtin.h
mooncake-allocator/src/: CMakeLists.txt  buffer_allocator.cpp  common_types.cpp  config.cpp  distributed_object_store.cpp  distributed_object_store_helper.cpp  dummy_transfer_agent.cpp  random_allocation_strategy.cpp  rdma_transfer_agent.cpp  replica_allocator.cpp  types.cpp
mooncake-allocator/src/cachelib_memory_allocator/: AllocationClass.cpp  MemoryAllocator.cpp  MemoryPool.cpp
mooncake-allocator/tests/: CMakeLists.txt  buffer_allocator_test.cpp  multi_object_store_test.cpp  object_store_test.cpp  object_store_test2.cpp  rdma_object_store_test.cpp  replica_allocator_test.cpp  replica_allocator_test2.cpp
mooncake-integration/: CMakeLists.txt  README.md  benchmark_results.md
mooncake-integration/vllm/: README.md  vllm_adaptor.cpp  vllm_adaptor.h
mooncake-p2p-store/: CMakeLists.txt  build.sh
mooncake-p2p-store/src/: Makefile
mooncake-p2p-store/src/example/: p2p-store-example.go
mooncake-p2p-store/src/p2pstore/: core.go  error.go  registered_memory.go  transfer_engine.go
mooncake-transfer-engine/: CMakeLists.txt
mooncake-transfer-engine/example/: CMakeLists.txt  memory_pool.cpp  transfer_engine_bench.cpp  vllm_integration.cpp
mooncake-transfer-engine/include/: common.h  config.h  error.h  transfer_engine.h  transfer_engine_c.h  transfer_metadata.h
mooncake-transfer-engine/integration/: CMakeLists.txt
mooncake-transfer-engine/integration/rust/: build.rs
mooncake-transfer-engine/integration/vllm/: vllm_adaptor.cpp  vllm_adaptor.h  vllm_adaptor_py.cpp
mooncake-transfer-engine/integration/vllm/python/: README.md  client_test.py  mq_wrapper.py  server_test.py  vllm_adaptor.py
mooncake-transfer-engine/scripts/: mount.py  register.py
mooncake-transfer-engine/src/: CMakeLists.txt  config.cpp  transfer_engine.cpp  transfer_engine_c.cpp  transfer_metadata.cpp
mooncake-transfer-engine/tests/: CMakeLists.txt  cufile_transport_test.c  endpoint_test.cpp  gpu_test.cpp  rdma_transport_test.cpp  rdma_transport_test2.cpp  tcp_transport_test.cpp  transfer_engine_daemon.cpp  transfer_engine_test.cpp  transfer_metadata_test.cpp  transport_uint_test.cpp  unit_tests.cpp  xport_test.c
p2pstore/: Makefile  catalog.go  core.go  metadata.go  transfer_engine.go
p2pstore/cmd/: example.go
scripts/: mount.py  register.py
src/allocator/: CMakeLists.txt  CacheAllocator.cpp  RandomAllocationStrategy.h  (+13 more)
src/cachelib_memory_allocator/: CMakeLists.txt  Slab.h  SlabAllocator.cpp  main.cpp
src/transfer_engine/: CMakeLists.txt  common.h  config.cpp  config.h  cufile_context.h  cufile_desc_pool.cpp  endpoint_store.cpp  endpoint_store.h  engine.cpp  engine.h  error.h  multi_transfer_engine.cpp  multi_transfer_engine.h  nvmeof_transport.cpp  nvmeof_transport.h  old_transfer_engine.cpp  old_transfer_engine.h  rdma_context.cpp  rdma_context.h  rdma_endpoint.cpp  rdma_endpoint.h  rdma_transport.cpp  rdma_transport.h  transfer_engine.cpp  transfer_engine.h  transfer_engine_c.cpp  transfer_engine_c.h  transfer_metadata.cpp  transfer_metadata.h  transport.cpp  transport.h  worker_pool.cpp  worker_pool.h
src/transfer_engine/transport/: CMakeLists.txt  transport.cpp  transport.h
src/transfer_engine/transport/nvmeof_transport/: CMakeLists.txt  cufile_desc_pool.cpp  cufile_desc_pool.h  nvmeof_transport.cpp  nvmeof_transport.h
src/transfer_engine/transport/rdma_transport/: CMakeLists.txt  endpoint_store.cpp  rdma_context.cpp  rdma_context.h  rdma_endpoint.cpp  rdma_transport.cpp  rdma_transport.h  worker_pool.cpp  worker_pool.h
test/: CMakeLists.txt  rdma_test.cpp
(+47 files in other folders)
